# llmeasy

./: .coveragerc  .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: dependencies.yml  test-config.yml  test.yml
examples/: __init__.py  advanced_usage.py  basic_claude_example.py  basic_openai_example.py  basic_usage.py  claude_json_stream.py  comparison_provider.py  comparison_provider_chaining.py  comparison_streaming_example.py  custom_templates.py  gemini_example.py  grok_example.py  mistral_example.py  run_all_examples.py
examples/templates/: __init__.py  advanced_templates.py  basic_templates.py  claude_templates.py  comparison_templates.py  custom_templates.py  gemini_templates.py  grok_templates.py  mistral_templates.py  openai_templates.py
integration/: integration-readme.md  test_basic_queries.py  test_error_handling.py  test_json_handling.py  test_json_templates.py  test_model_config.py  test_provider_chaining.py  test_provider_features.py  test_streaming.py  test_template_parser.py  test_utils.py
llm_query/: __init__.py
llm_query/providers/: __init__.py  claude.py  openai.py
llm_query/utils/: config.py
tests/: conftest.py  test-readme.md
tests/integration/: conftest.py  test_basic_queries.py  test_error_handling.py  test_json_handling.py  test_json_templates.py  test_model_config.py  test_provider_chaining.py  test_provider_features.py  test_streaming.py
tests/test_templates/: test_template_parser.py
tests/unit/: __init__.py  test_base.py  test_base_provider.py  test_config_unit.py  (+4 more)
(+7 files in other folders)
