[tool.poetry]
name = "ai-robust-llm"
version = "0.1.0"
description = "A flexible Python library for querying different LLM providers with templated inputs and outputs"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "llm_query"}]

[tool.poetry.dependencies]
python = "^3.9"
anthropic = "^0.40.0"
openai = "^1.12.0"
python-dotenv = "^1.0.0"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"
aiohttp = "^3.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi-line-output = 3 